# xiaomi-debloater

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
data/: packages.json
src/: adb.rs  main.rs  model.rs  ui.rs
