[package]
name = "xiaomi-debloater"
version = "0.1.0"
edition = "2021"
description = "Terminal UI tool to debloat Xiaomi / MIUI devices over ADB"
license = "MIT"
repository = "https://github.com/hocestnonsatis/xiaomi-debloater"
keywords = ["adb", "xiaomi", "miui", "debloat", "android"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
